<resources>
    <string name="successful">Successfully marked as favourites</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key">AIzaSyAKCODXR2MQU8kd30dNwZ8iFybv9btnMbE  </string>
    <string name="app_name">ACE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">674632155971845</string>
    <string name="facebook_app_id_test">175703936145004</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_enter_email_address">Enter Email Address <font fgcolor="#75000000">(Optional)</font></string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="password">Password</string>
    <string name="eg_email">abc@email.com</string>
    <string name="eg_password">*******</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="login">Log In</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="change_password">Change Password</string>
    <string name="reason_for_rejection">REASON</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         .</string>
    <string name="this_is_login_fragment">This is Login Fragment</string>
    <string name="wellcome_to_ace">Welcome to ACE</string>
    <string name="wellcome_slogan">We make your life healthy and wealthy</string>
    <string name="select_language">Select Language</string>
    <string name="not_a_member">Not a member?</string>
    <string name="create_account">Create an Account</string>
    <string name="or">Or</string>
    <string name="john">John</string>
    <string name="doe">Doe</string>
    <string name="sign_via_twitter">Sign Up via Twitter</string>
    <string name="sign_up_as_trainee">Sign Up As Trainee</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up_as_trainer">Sign Up As Trainer</string>
    <string name="education_and_cirtification">Education And Certification</string>
    <string name="please_select">Please select all that apply</string>
    <string name="cb_degree">Degree (Exercise Physcology, Kinesiology, Other)</string>
    <string name="cb_nasm">NASM</string>
    <string name="cb_ncsa">NCSA</string>
    <string name="cb_acsm">ACSM</string>
    <string name="cb_check">CHECK</string>
    <string name="cb_ace">ACE</string>
    <string name="cb_aother_cirtifications">Other Certifications (Massage, Yoga, Pilates stc)</string>
    <string name="cb_cpr">CPR/AED</string>
    <string name="university">University</string>
    <string name="pref_training_gym">Preferred Training Gym</string>
    <string name="enter_university_name">Enter University Name</string>
    <string name="add_location_on_the_map">Add location on the map</string>
    <string name="sellect_type_of_training">Please select the type of trainings you provide (Speciality)</string>
    <string name="pref_training_loc">Preferred Location</string>
    <string name="cb_select_all">Select All</string>
    <string name="cb_flexibility">Flexibility training</string>
    <string name="cb_dunamic_strength">Dynamic strength training</string>
    <string name="cb_static_strength">Static strength training</string>
    <string name="cb_circuit">Circuit training</string>
    <string name="cb_aerobic">Aerobic training</string>
    <string name="cb_body_building">Body Building</string>
    <string name="cb_loose_weight">Loose Weight</string>
    <string name="years_of_exp">Years of Experience</string>
    <string name="cb_less_then_1">Less then 1 year</string>
    <string name="cb_1_to_5_years">1 to 5 years</string>
    <string name="cb_5_years_or_more">5 years or more</string>
    <string name="my_gym_timings">My Timings</string>
    <string name="cb_sun">S</string>
    <string name="cb_mon">M</string>
    <string name="cb_tue">T</string>
    <string name="cb_wed">W</string>
    <string name="cb_thur">T</string>
    <string name="cb_fri">F</string>
    <string name="cb_sat">S</string>
    <string name="dd_from">From</string>
    <string name="dd_to">To</string>
    <string name="upload_cv_optional">Upload CV (Optional)</string>
    <string name="browse">Browse</string>
    <string name="what_is_your_primary">What is your primary Reason to train at ACE?</string>
    <string name="primary_reason">I want to join ace because i am passion...</string>
    <string name="toast_education_empty">Please select education</string>
    <string name="toast_speciality_empty">Please select Speciality</string>
    <string name="toast_experience_empty">Please select Experienc</string>
    <string name="toast_gym_days_empty">Please select Gym Days</string>
    <string name="toast_time_from_empty">Please select time from</string>
    <string name="toast_time_to_empty">Please select time to</string>
    <string name="toast_location_to_empty">Please select a Location</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_sample">abc@email.com</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="code_sample">78569</string>
    <string name="country">Country</string>
    <string name="country_sample">Saudi Arabia</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_sample">+966-123-4567</string>
    <string name="we_text_you">We\'ll text you a code to confirm your number</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="a_verification_has_been_sent">A verification has been sent to your email address.</string>
    <string name="email_address">Email Address</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="you_all_sign">you are signed up</string>
    <string name="charlie_hunnam">Charlie</string>
    <string name="we_glad_you_here">We\'re glad you\'re here</string>
    <string name="james_blunt">James Blunt</string>
    <string name="reset">Reset</string>
    <string name="an_email_has_been">An email has been sent to your account \n with password reset link</string>
    <string name="avaliability">Avaliability</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="private_information">Private Information</string>
    <string name="edit_university">Edit University</string>
    <string name="edit_gym_location">Edit Gym Location</string>
    <string name="edit_certification">Edit Certification</string>
    <string name="edit_training_speciality">Edit Training Speciality</string>
    <string name="male">Male</string>
    <string name="femaile">Female</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="notifications">Notifications</string>
    <string name="prvate_or_public_account"> Private Account / Public Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="please_feel">Please feel free to contact us for any enquiries on the option below</string>
    <string name="confirm_pass">Confirm New Password</string>
    <string name="current_password">Current Pasword</string>
    <string name="follow">Follow</string>
    <string name="request">Request</string>
    <string name="will_be_implemented">Will be implemented in beta version</string>
    <string name="inbox">Inbox</string>
    <string name="i_wont_be">I won\'t be able to make it today</string>
    <string name="rebeca_black">Rebaca Black</string>
    <string name="what_other_training">what other training experties do you have</string>
    <string name="steve_camb">Rebaca Black</string>
    <string name="please_reply">Please reply back when you get this message</string>
    <string name="write_a_message">Write a message here</string>
    <string name="please_send_me">Please send me your photos</string>
    <string name="sending_you">Sendin you now</string>
    <string name="log_out">Logout</string>
    <string name="end_time_should">End time should be less then start time</string>
    <string name="start_time_should">Start time should be less then start time</string>
    <string name="no_data">No Data to show</string>
    <string name="no_internet">Internet Connection Lost</string>
    <string name="password_length_alert">Password Length Must be greate than 6 Characters</string>
    <string name="ok">OK</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="done">DONE</string>
    <string name="name">Name</string>
    <string name="comments">Comments</string>
    <string name="_13m">13m</string>
    <string name="mx">|</string>
    <string name="reply">Reply</string>
</resources>