<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/x10"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginBottom="@dimen/x10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/CircularImageCommentor"
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/x50"
                android:src="@drawable/profile_pic_trainer"
                android:layout_weight="2"
                android:layout_marginTop="@dimen/x10"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_marginTop="@dimen/x3"
            android:layout_marginLeft="@dimen/x5">


            <com.app.ace.ui.views.AnyTextView
                android:id="@+id/tv_NameCommentor"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/name"
                android:textColor="#393939"
                android:layout_weight="3"
                android:textSize="@dimen/x15"
                android:layout_marginTop="@dimen/x5"
                app:typeface="Roboto-Regular.ttf"/>

            <com.app.ace.ui.views.AnyTextView
                android:id="@+id/tv_CommentBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:layout_marginTop="@dimen/x4"
                android:textSize="@dimen/x10"
                android:textColor="#938B8B"
                app:typeface="Roboto-Regular.ttf"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.app.ace.ui.views.AnyTextView
                    android:id="@+id/tv_Time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_13m"
                    android:paddingTop="@dimen/x1"
                    android:textSize="@dimen/x10"
                    android:textColor="#938B8B"
                    app:typeface="Roboto-Regular.ttf"/>

                <com.app.ace.ui.views.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mx"
                    android:layout_marginLeft="@dimen/x5"
                    app:typeface="Roboto-Regular.ttf"/>

                <com.app.ace.ui.views.AnyTextView
                    android:id="@+id/tv_Reply"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/reply"
                    android:paddingLeft="@dimen/x5"
                    android:paddingTop="@dimen/x3"
                    android:paddingRight="@dimen/x5"
                    android:textSize="@dimen/x10"
                    app:typeface="Roboto-Regular.ttf"
                    android:textColor="#AE2A2F"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:alpha="0.6"
        android:background="@drawable/seperator"
        android:paddingLeft="@dimen/x25"
        android:paddingStart="@dimen/x250"
        android:layout_marginTop="@dimen/x15"/>

</LinearLayout>
