<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

    <com.app.ace.ui.views.AnyTextView
        android:layout_below="@+id/txt_personal_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x15"
        android:layout_marginBottom="@dimen/x3"
        android:layout_marginTop="@dimen/x25"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="@dimen/x15"
        android:gravity="center"
        android:alpha="0.8"
        app:typeface="Roboto-Bold.ttf"
        />

    <com.app.ace.ui.views.AnyEditTextView
        android:id="@+id/edtUserName"
        style="@style/form_edttext_fields_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_password"
        android:layout_margin="@dimen/x15"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:maxLength="50"
        app:emptyAllowed="false"
        android:textColorHint="@color/edittext_hint_color"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/x14"
        app:typeface="Roboto-Regular.ttf" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:alpha="0.6"
        android:background="@drawable/text"/>

    <com.app.ace.ui.views.AnyEditTextView
        android:id="@+id/edtUniversity"
        style="@style/form_edttext_fields_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:layout_margin="@dimen/x15"
        android:inputType="textNoSuggestions"
        android:singleLine="false"
        android:maxLines="2"
        android:text=""
        android:maxLength="100"
        app:emptyAllowed="false"
        android:textColorHint="@color/edittext_hint_color"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/x14"
        app:typeface="Roboto-Regular.ttf" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:alpha="0.6"
        android:background="@drawable/text"/>

    <com.app.ace.ui.views.AnyEditTextView
        android:id="@+id/txtGymLocatoin"
        style="@style/form_edttext_fields_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_pass"
        android:layout_margin="@dimen/x15"
        android:inputType="textNoSuggestions"
        android:singleLine="false"
        android:maxLines="2"
        android:text=""
        android:maxLength="100"
        app:emptyAllowed="false"
        android:textColorHint="@color/edittext_hint_color"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/x14"
        app:typeface="Roboto-Regular.ttf" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_marginBottom="@dimen/x25"
        android:alpha="0.6"
        android:background="@drawable/text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginBottom="@dimen/x20"
            android:alpha="0.6"
            android:background="@drawable/text"/>

        <com.app.ace.ui.views.AnyTextView
            android:layout_below="@+id/txt_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginTop="@dimen/x5"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="@dimen/x15"
            android:gravity="center"
            android:alpha="0.8"
            app:typeface="Roboto-Bold.ttf"
            android:id="@+id/anyTextView2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/x10"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_marginBottom="@dimen/x20"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/cb_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/selector_chkbox"
                    android:checked="false"
                    android:paddingTop="@dimen/x7"
                    android:paddingLeft="@dimen/x7"
                    android:paddingRight="@dimen/x7"
                    android:paddingBottom="@dimen/x2"
                    android:text="@string/english"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/x14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x1"
                    android:alpha="0.6"
                    android:layout_marginRight="@dimen/x10"
                    android:layout_marginTop="@dimen/x10"
                    android:background="@drawable/text"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/cb_arabic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/selector_chkbox"
                    android:checked="false"
                    android:paddingTop="@dimen/x7"
                    android:paddingLeft="@dimen/x7"
                    android:paddingRight="@dimen/x7"
                    android:paddingBottom="@dimen/x2"
                    android:text="@string/arabic"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/x14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x1"
                    android:alpha="0.6"
                    android:layout_marginLeft="@dimen/x10"
                    android:layout_marginTop="@dimen/x10"
                    android:background="@drawable/text"/>



            </LinearLayout>



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginTop="@dimen/x10"
            android:alpha="0.6"
            android:background="@drawable/text"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/x20"
        >

        <com.app.ace.ui.views.AnyTextView
            android:layout_below="@+id/txt_notifications"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/notifications"
            android:textColor="@color/black"
            android:textSize="@dimen/x15"
            android:gravity="start"
            android:alpha="0.8"
            app:typeface="Roboto-Bold.ttf"
            />


        <ToggleButton
            android:id="@+id/toggle_notifications"
            android:layout_width="@dimen/x50"
            android:layout_height="@dimen/x25"
            android:layout_marginLeft="@dimen/x15"
            android:background="@drawable/selector_toggle"
            android:text=""
            android:gravity="right|center_vertical"
            android:textOff=""
            android:textOn=""
            android:checked="true"
            />



    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:alpha="0.6"
            android:background="@drawable/text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/x20"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_marginBottom="@dimen/x20"
            >

            <com.app.ace.ui.views.AnyTextView
                android:layout_below="@+id/txt_private_or_public"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/prvate_or_public_account"
                android:textColor="@color/black"
                android:textSize="@dimen/x15"
                android:gravity="start"
                android:alpha="0.8"
                app:typeface="Roboto-Bold.ttf"
                android:id="@+id/anyTextView3" />


            <ToggleButton
                android:id="@+id/toggle_private_or_public"
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/x25"
                android:layout_marginLeft="@dimen/x15"
                android:background="@drawable/selector_toggle"
                android:text=""
                android:gravity="right|center_vertical"
                android:textOff=""
                android:textOn=""
                android:checked="true"
                />



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:alpha="0.6"
            android:background="@drawable/text"/>

        <com.app.ace.ui.views.AnyTextView
            android:layout_below="@+id/txt_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginTop="@dimen/x15"
            android:text="@string/contact_us"
            android:textColor="@color/black"
            android:textSize="@dimen/x15"
            android:gravity="center"
            android:alpha="0.8"
            app:typeface="Roboto-Bold.ttf"
            android:id="@+id/anyTextView4" />

        <com.app.ace.ui.views.AnyTextView
            android:id="@+id/txt_contact_us_disc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/please_feel"
            android:layout_margin="@dimen/x15"
            android:maxLines="2"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/x14"
            app:typeface="Roboto-Regular.ttf" />

        <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:alpha="0.6"
        android:background="@drawable/text"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:alpha="0.4"
            android:layout_marginTop="@dimen/x20"
            android:background="@drawable/text"/>


        <com.app.ace.ui.views.AnyTextView
            android:layout_below="@+id/txt_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginTop="@dimen/x15"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textSize="@dimen/x15"
            android:gravity="center"
            android:alpha="0.8"
            android:layout_marginBottom="@dimen/x20"
            app:typeface="Roboto-Bold.ttf"
            android:id="@+id/txt_logout" />


   </LinearLayout>

</ScrollView>